adding unit tests for the network folder